--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Hyunil Jang</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="#" class="btn-rounded-white">이력서 보기</a>
         </div>
         <!-- End #lead-content -->
 
