--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        <h3>Think Different! Romance Developer!</h3>
+                        제가 개발을 하면서 모토로 삼은 두가지입니다. 학교를 다니면서 스타트업에서 개발을 시작하여 남들이 경험하기 힘든 많은 경험을 쌓았고
+                        새로운 기술, 트렌디한 개발을 많이 하였습니다. 저는 전문적으로 경험하지는 않았지만 초기 스타트업에서 일을 했기 때문에 마케팅, 디자인 등의 작업도 경험해 볼 수 있었습니다.<br />
+                        Geek하고 실력이 좋은 개발자도 좋지만 저는 다른 분야의 업무를 이해할 수 있고 커피 한잔을 하며 원만하게 커뮤니케이션을 하며 사용자를 위해 한번 더 생각하고 이 세상이 조금 더 나아지기 위해 힘쓰는 개발자가 되기 위해 노력하고 있습니다.
+
                     </p>
                 </div>
             </div>
@@ -86,34 +88,28 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="October 2014 – December 2015">
+                <h3>Belkatonic</h3>
+                <h4>Software Engineer</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
+                <a href="http://belkatonic.com/ko/index.html">www.belkatonic.com/ko/index.html</a>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2016 – Now">
+                <h3>강남히어로즈</h3>
+                <h4>Founder, Software Engineer</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                <a href="http://www.gangnamheroes.com">www.gangnamheroes.com</a>
             </div>
         </div>
     </div>
     <!-- End #experience -->
 
-    <div id="education">
+    <!-- <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of Ottawa</h3>
@@ -122,10 +118,10 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
-        </div>
+        </div> -->
         <!-- End .education-block -->
 
-        <div class="education-block">
+        <!-- <div class="education-block">
             <h3>University of Ottawa</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
@@ -140,12 +136,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
             </ul>
-        </div>
+        </div> -->
         <!-- End .education-block -->
-    </div>
+    <!-- </div> -->
     <!-- End #education -->
 
-    <div id="projects" class="background-alt">
+    <div id="projects" >
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
@@ -155,9 +151,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Henkel Homecare</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                          업무 내용 : Henkel Homecare 사이트 내에 이벤트 페이지 구성 및 admin 페이지 이벤트 페이지 구성, 서버 api 개발  <br/>
+                          사용 언어 :  Java, Spring, HTML, CSS, Javascript, jQuery
+
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -185,7 +183,7 @@
     </div>
     <!-- End #projects -->
 
-    <div id="skills">
+    <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
