docs: add project and delete about me

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <li>
                 <a href="#experience">Experience</a>
             </li>
-            <li>
+            <!-- <li>
                 <a href="#education">Education</a>
-            </li>
+            </li> -->
             <li>
                 <a href="#projects">Projects</a>
             </li>
@@ -73,10 +73,10 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        <h3>Think Different! Romance Developer!</h3>
+                        <!-- <h3>Think Different! Romance Developer!</h3>
                         제가 개발을 하면서 모토로 삼은 두가지입니다. 학교를 다니면서 스타트업에서 개발을 시작하여 남들이 경험하기 힘든 많은 경험을 쌓았고
                         새로운 기술, 트렌디한 개발을 많이 하였습니다. 저는 전문적으로 경험하지는 않았지만 초기 스타트업에서 일을 했기 때문에 마케팅, 디자인 등의 작업도 경험해 볼 수 있었습니다.<br />
-                        Geek하고 실력이 좋은 개발자도 좋지만 저는 다른 분야의 업무를 이해할 수 있고 커피 한잔을 하며 원만하게 커뮤니케이션을 하며 사용자를 위해 한번 더 생각하고 이 세상이 조금 더 나아지기 위해 힘쓰는 개발자가 되기 위해 노력하고 있습니다.
+                        Geek하고 실력이 좋은 개발자도 좋지만 저는 다른 분야의 업무를 이해할 수 있고 커피 한잔을 하며 원만하게 커뮤니케이션을 하며 사용자를 위해 한번 더 생각하고 이 세상이 조금 더 나아지기 위해 힘쓰는 개발자가 되기 위해 노력하고 있습니다. -->
 
                     </p>
                 </div>
@@ -151,11 +151,10 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Henkel Homecare</h3>
+                        <h2>Henkel Homecare</h2>
                         <p>
                           업무 내용 : Henkel Homecare 사이트 내에 이벤트 페이지 구성 및 admin 페이지 이벤트 페이지 구성, 서버 api 개발  <br/>
                           사용 언어 :  Java, Spring, HTML, CSS, Javascript, jQuery
-
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -169,15 +168,48 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h2>삼성전자 Shealth</h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            삼성전자 Shealth admin portal 퍼블리싱 작업
                         </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h2>YBM CNNez, CNN 뉴스청취</h2>
+                        <p>
+                            YBM CNNez, CNN 뉴스청취 유지보수
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h2>한국타이어 모바일 사보</h2>
+                        <p>
+                            한국타이어 모바일 사보 유지보수 작업
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
@@ -187,31 +219,14 @@
         <h2 class="heading">Skills</h2>
         <ul>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
+            <li>TypeScript</li>
             <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
+            <li>ReactJS</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SCSS</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Android</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -219,7 +234,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/hyunil.jang@gangnamheroes.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
