feat: add skills aws, fuse

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
             <li>SCSS</li>
             <li>Java</li>
             <li>Android</li>
+            <li>AWS</li>
+            <li>Fuse</li>
         </ul>
     </div>
     <!-- End #skills -->
