feat: add project

--- a/index.html
+++ b/index.html
@@ -210,6 +210,41 @@
                 </div>
                 <!-- End .project -->
 
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h2>브레인콜라 잉크</h2>
+                        <p>
+                            2.0 db 업데이트
+                            서버 api 유지보수
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h2>후추</h2>
+                        <p>
+                            책 meta 정보를 긁어오는 크롤러 개발
+                            서버 api 개발 
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
